# No-ill

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml 돌아가라 얍  CODECONVENTION.md  FCM_REFACTORING_SUMMARY.md  FCM_TOKEN_TEST_GUIDE.md  NOILL_CONVERSATION_SYSTEM.md  NOILL_PROMPT_SYSTEM.md  NOILL_SYSTEM_FLOW.md  QUICK_FCM_TEST.md  README.md  ROBOT_STATUS_PLAN.md  SLEEP_MODE_PLAN.md  TODO_BE_SCHEDULE.md  package-lock.json
app/: .gitignore  pubspec.yaml
app/lib/: main.dart
app/lib/screens/: main_screen.dart
app/test/: widget_test.dart
car/: NODES.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  TTS_TEST_REPORT.md  build_workspace.sh  interactive_test.sh  jetson_setup.sh  rebuild_package.sh  tts_test_detailed.sh
car/chat_stop_gate/: package.xml
car/config/: nav2_params.yaml  twist_mux.yaml
car/config/behavior_trees/: nav_through_poses_no_spin.xml  nav_to_pose_no_spin.xml
car/emergency_response/: setup.cfg
car/emergency_response/emergency_response/: emergency_response_node.py
car/fall_accident_judgement/: package.xml  setup.cfg  setup.py
car/fall_accident_judgement/fall_accident_judgement/: judgement_node.py
car/llm/: package.xml
car/llm/llm/: llm_node.py
car/no_ill_bringup/config/: nav2_params.yaml  twist_mux.yaml
car/no_ill_bringup/launch/: no_ill_full.launch.py
car/no_ill_bringup/maps/: home_map.yaml
car/patrol_pkg/src/: patrol_node.cpp
car/pca_drive/: CMakeLists.txt
car/pca_drive/src/: pca_drive_node.cpp
car/person_override_pkg/src/: person_override_node.cpp  person_override_node.cpp.bak
car/robot_bringup/: setup.py
car/safety_override_pkg/src/: safety_override_node.cpp
car/src/control/safety_override_pkg/: CMakeLists.txt
car/src/control/safety_override_pkg/src/: safety_override_node.cpp
car/src/core/no_ill_bringup/: package.xml  setup.py
car/src/core/no_ill_bringup/config/: nav2_params.yaml  twist_mux.yaml
car/src/core/no_ill_bringup/launch/: no_ill_full.launch.py
car/src/core/no_ill_bringup/rviz/: no_ill.rviz
car/stt/stt/: hotwords.txt  stt_node.py
car/tts/tts/: tts_node.py
car/upload_accident/upload_accident/: upload_accident_node.py
car/yolo_detector/install/: setup.ps1
car/yolo_detector/log/: latest_build
car/yolo_detector/yolo_detector/: detector_node.py
display/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  design-guide.md  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js  vitest.config.js
display/public/: firebase-messaging-sw.js
display/src/: App.css  App.jsx  App.test.jsx  index.css
display/src/api/: client.js
display/src/components/: CommandsPanel.css  CommandsPanel.jsx  Dashboard.css  Dashboard.jsx  Footer.css  Footer.jsx  GreetingCard.css  GreetingCard.jsx  Header.css  Header.jsx  SchedulePanel.css  SchedulePanel.jsx
display/src/hooks/: useIdle.js
display/src/pages/: AdminPage.jsx  DisplayPage.jsx  LoginPage.jsx
jetson/: .env.example  README.md  noill.service  setup.sh
jetson/ros2_ws/: launch_log.txt
jetson/ros2_ws/config/: amcl.yaml  frames_2026-01-28_21.51.20.gv  (+1 more)
jetson/ros2_ws/install/noili_bringup/share/noili_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
jetson/ros2_ws/install/noili_bringup/share/noili_bringup/config/: nav2_params.yaml  sensors.yaml  twist_mux.yaml
jetson/ros2_ws/install/noili_bringup/share/noili_bringup/launch/: noill.sensors.launch.py  noill_full.launch.py
jetson/ros2_ws/src/safety_override_pkg/: package.xml
jetson/ros2_ws/src/safety_override_pkg/src/: safety_override_node.cpp
jetson/ros2_ws/src/tracking_drive_test/: CMakeLists.txt
jetson/ros2_ws/src/tracking_drive_test/src/: person_cmdvel.cpp  person_steer_float.cpp
noill_app/: .env.example  .gitignore  .gitlab-ci.yml  README.md  firebase.json  pubspec.yaml
noill_app/android/: settings.gradle.kts
noill_app/lib/: firebase_options.dart  main.dart
noill_app/linux/: CMakeLists.txt
noill_app/test/: widget_test.dart
noill_app/web/: firebase-messaging-sw.js  index.html  manifest.json
noill_app/windows/: CMakeLists.txt
server/: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.gradle  settings.gradle
src/my_robot_bringup/: package.xml  setup.py
tests/: config.py  install_dependencies.sh  integrated_load_test.py  jetson-orin-nano-wsl2-setup.sh
yolo_detector/: package.xml
산출물/: A301_기능리스트.docx  A301_화면설계서.pptx
(+445 files in other folders)
