cmake_minimum_required(VERSION 3.8)
project(safety_override_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

add_executable(safety_override_node src/safety_override_node.cpp)
ament_target_dependencies(safety_override_node rclcpp sensor_msgs geometry_msgs)

install(TARGETS safety_override_node
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()

