<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>no_ill_bringup</name>
  <version>1.0.0</version>
  <description>No-ill robot bringup package</description>
  <maintainer email="jetson@jetson.com">Jetson</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <!-- 외부 패키지 -->
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  
  <!-- 우리 패키지 -->
  <exec_depend>safety_override_pkg</exec_depend>
  <exec_depend>person_override_pkg</exec_depend>
  <exec_depend>chat_stop_gate</exec_depend>
  <exec_depend>upload_accident</exec_depend>
  <exec_depend>pca_drive</exec_depend>
  <exec_depend>yolo_detector</exec_depend>
  <exec_depend>fall_accident_judgement</exec_depend>
  <exec_depend>emergency_response</exec_depend>
  <exec_depend>llm</exec_depend>
  <exec_depend>stt</exec_depend>
  <exec_depend>tts</exec_depend>
  <exec_depend>patrol_pkg</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
